# AV_QC

./: CMakeLists.txt  codecWindow.cpp  codecWindow.h  codecs.ui  data.ui  main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  mediaInfo_data.cpp  mediaInfo_data.h  metadataWindow.cpp  metadataWindow.h  ui_codecs.h  ui_data.h  ui_mainWindow.h
